--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         height: 100%;
         width: 100%;
       }
+      webview, #view, #views {
+        width: 100%;
+        height: 100%;
+        display: block;
+      }
     </style>
     <!--
     <style media="screen">
@@ -37,6 +42,9 @@
     We are using Node.js <span id="node-version"></span>,
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
+    <div id="views">
+      <webview id="view" class="page" src="http://www.google.com/" autosize="on"></webview>
+    </div>
   <script src="./renderer.js"></script>
   </body>
 </html>
